Updated Qld List - lists-test and changelog EPBC - additional status Fields included

--- a/source-code/py-notebook/sensitive/QLD-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/QLD-sensitive.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -74,9 +74,11 @@
     "import sys\n",
     "import datetime\n",
     "\n",
+    "\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf\n",
     "\n",
     "sourceDataDir = projectDir + \"source-data/QLD/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Status codes\n",
@@ -146,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "   Code       Code_description\n20    C          Least concern\n21   CR  Critically Endangered\n22    E             Endangered\n23   EX                Extinct\n24    I          International\n25   NT        Near Threatened\n26    P             Prohibited\n27   PE    Extinct in the wild\n28   SL  Special least concern\n29    V             Vulnerable",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Code</th>\n      <th>Code_description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20</th>\n      <td>C</td>\n      <td>Least concern</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>CR</td>\n      <td>Critically Endangered</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>E</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>EX</td>\n      <td>Extinct</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>I</td>\n      <td>International</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>NT</td>\n      <td>Near Threatened</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>P</td>\n      <td>Prohibited</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>PE</td>\n      <td>Extinct in the wild</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>SL</td>\n      <td>Special least concern</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>V</td>\n      <td>Vulnerable</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "sensitivelist = pd.read_csv(sourceDataDir + \"qld-confidential-species.csv\")"
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# nca status\n",
@@ -239,14 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "                   scientificName  \\\n0      Rhinolophus philippinensis   \n1               Chloebia gouldiae   \n2              Erythrura trichroa   \n3    Neochmia phaeton evangelinae   \n4          Poephila cincta cincta   \n..                            ...   \n954      Pneumatopteris pennigera   \n955           Reholttumia costata   \n956         Thelypteris confluens   \n957            Macadamia jansenii   \n958        Tmesipteris lanceolata   \n\n                                     vernacularName category generalisation  \n0                 greater large-eared horseshoe bat       EN           2 km  \n1                                    Gouldian finch       EN           2 km  \n2                           blue-faced parrot-finch       NT           2 km  \n3          crimson finch (white-bellied subspecies)       EN           2 km  \n4    black-throated finch (white-rumped subspecies)       EN           2 km  \n..                                              ...      ...            ...  \n954                                       lime fern       EN           2 km  \n955                                             NaN       NT           2 km  \n956                                             NaN       VU           2 km  \n957                                             NaN       CR           2 km  \n958                                             NaN       EW           2 km  \n\n[959 rows x 4 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>category</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Rhinolophus philippinensis</td>\n      <td>greater large-eared horseshoe bat</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Chloebia gouldiae</td>\n      <td>Gouldian finch</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Erythrura trichroa</td>\n      <td>blue-faced parrot-finch</td>\n      <td>NT</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Neochmia phaeton evangelinae</td>\n      <td>crimson finch (white-bellied subspecies)</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Poephila cincta cincta</td>\n      <td>black-throated finch (white-rumped subspecies)</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>954</th>\n      <td>Pneumatopteris pennigera</td>\n      <td>lime fern</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>955</th>\n      <td>Reholttumia costata</td>\n      <td>NaN</td>\n      <td>NT</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>956</th>\n      <td>Thelypteris confluens</td>\n      <td>NaN</td>\n      <td>VU</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>957</th>\n      <td>Macadamia jansenii</td>\n      <td>NaN</td>\n      <td>CR</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>958</th>\n      <td>Tmesipteris lanceolata</td>\n      <td>NaN</td>\n      <td>EW</td>\n      <td>2 km</td>\n    </tr>\n  </tbody>\n</table>\n<p>959 rows × 4 columns</p>\n</div>"
+      "text/plain": "                   scientificName  \\\n0      Rhinolophus philippinensis   \n1               Chloebia gouldiae   \n2              Erythrura trichroa   \n3    Neochmia phaeton evangelinae   \n4          Poephila cincta cincta   \n..                            ...   \n955      Pneumatopteris pennigera   \n956           Reholttumia costata   \n957         Thelypteris confluens   \n958            Macadamia jansenii   \n959        Tmesipteris lanceolata   \n\n                                     vernacularName category generalisation  \n0                 greater large-eared horseshoe bat       EN           2 km  \n1                                    Gouldian finch       EN           2 km  \n2                           blue-faced parrot-finch       NT           2 km  \n3          crimson finch (white-bellied subspecies)       LC           2 km  \n4    black-throated finch (white-rumped subspecies)       EN           2 km  \n..                                              ...      ...            ...  \n955                                       lime fern       EN           2 km  \n956                                             NaN       NT           2 km  \n957                                             NaN       VU           2 km  \n958                                             NaN       CR           2 km  \n959                                             NaN       EW           2 km  \n\n[960 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>category</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Rhinolophus philippinensis</td>\n      <td>greater large-eared horseshoe bat</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Chloebia gouldiae</td>\n      <td>Gouldian finch</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Erythrura trichroa</td>\n      <td>blue-faced parrot-finch</td>\n      <td>NT</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Neochmia phaeton evangelinae</td>\n      <td>crimson finch (white-bellied subspecies)</td>\n      <td>LC</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Poephila cincta cincta</td>\n      <td>black-throated finch (white-rumped subspecies)</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>955</th>\n      <td>Pneumatopteris pennigera</td>\n      <td>lime fern</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>956</th>\n      <td>Reholttumia costata</td>\n      <td>NaN</td>\n      <td>NT</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>957</th>\n      <td>Thelypteris confluens</td>\n      <td>NaN</td>\n      <td>VU</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>958</th>\n      <td>Macadamia jansenii</td>\n      <td>NaN</td>\n      <td>CR</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>959</th>\n      <td>Tmesipteris lanceolata</td>\n      <td>NaN</td>\n      <td>EW</td>\n      <td>2 km</td>\n    </tr>\n  </tbody>\n</table>\n<p>960 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 80,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,8 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished writing QLD Sensitive list\n"
+     ]
+    }
+   ],
    "source": [
     "dr = 'dr493'\n",
     "sensitivelist.to_csv(processedDataDir + 'sensitive-lists/QLD-' + dr + '-sensitive.csv',encoding=\"UTF-8\",index=False)\n",
@@ -321,8 +331,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QLD sensitive\n",
+      "get_changelist: Test -  dr18404 Prod -  dr493\n",
+      "download_ala_list:  https://lists.ala.org.au/ws/speciesListItems/dr493?max=10000&includeKVP=true\n",
+      "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
+      "       'kvpValues'],\n",
+      "      dtype='object')\n",
+      "download_ala_list:  https://lists-test.ala.org.au/ws/speciesListItems/dr18404?max=10000&includeKVP=true\n",
+      "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
+      "       'kvpValues'],\n",
+      "      dtype='object')\n",
+      "Finished QLD sensitive\n"
+     ]
+    }
+   ],
    "source": [
     "ltype = \"S\"\n",
     "changeDir = \"Monitoring/Change-logs/\"\n",
