explanatory markdown update

--- a/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
@@ -245,6 +245,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Back up the list in production to `historical-lists`\n",
     "If all ok, run the following to keep a copy of the list in prod before overwriting it"
    ],
    "metadata": {
