ACT conservation list update

--- a/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
@@ -44,9 +44,11 @@
     "import sys\n",
     "import os\n",
     "\n",
+    "import os\n",
+    "import os.path as path\n",
+    "\n",
     "# top level directory\n",
-    "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
-    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "projectDir = path.abspath(path.join(os.getcwd(),\"../../..\")) + \"/\"\n",
     "sourceDir = projectDir + \"source-data/act/\"\n",
     "sdataDir = \"current-lists/sensitive-lists/\"\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
@@ -58,6 +60,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-01-12T00:38:54.065786Z",
+     "start_time": "2024-01-12T00:38:53.579345Z"
     }
    }
   },
