Add wildnet taxon ID for QLD

--- a/source-code/py-notebook/sensitive/QLD-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/QLD-sensitive.ipynb
@@ -115,8 +115,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2024-01-12T04:38:56.579319Z",
-     "start_time": "2024-01-12T04:38:56.570189Z"
+     "end_time": "2024-01-12T07:13:54.825412Z",
+     "start_time": "2024-01-12T07:13:54.788513Z"
     }
    }
   },
@@ -132,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "   Code       Code_description\n20    C          Least concern\n21   CR  Critically Endangered\n22    E             Endangered\n23   EX                Extinct\n24    I          International\n25   NT        Near Threatened\n26    P             Prohibited\n27   PE    Extinct in the wild\n28   SL  Special least concern\n29    V             Vulnerable",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Code</th>\n      <th>Code_description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20</th>\n      <td>C</td>\n      <td>Least concern</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>CR</td>\n      <td>Critically Endangered</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>E</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>EX</td>\n      <td>Extinct</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>I</td>\n      <td>International</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>NT</td>\n      <td>Near Threatened</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>P</td>\n      <td>Prohibited</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>PE</td>\n      <td>Extinct in the wild</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>SL</td>\n      <td>Special least concern</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>V</td>\n      <td>Vulnerable</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,8 +158,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2024-01-12T04:38:59.649635Z",
-     "start_time": "2024-01-12T04:38:59.637391Z"
+     "end_time": "2024-01-12T07:14:51.094525Z",
+     "start_time": "2024-01-12T07:14:51.086114Z"
     }
    }
   },
@@ -180,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "                   scientificName  \\\n0            Rhinolophus robertsi   \n1               Chloebia gouldiae   \n2              Erythrura trichroa   \n3    Neochmia phaeton evangelinae   \n4          Poephila cincta cincta   \n..                            ...   \n955      Pneumatopteris pennigera   \n956           Reholttumia costata   \n957         Thelypteris confluens   \n958            Macadamia jansenii   \n959        Tmesipteris lanceolata   \n\n                                     vernacularName category generalisation  \n0                 greater large-eared horseshoe bat       EN           2 km  \n1                                    Gouldian finch       EN           2 km  \n2                           blue-faced parrot-finch       NT           2 km  \n3          crimson finch (white-bellied subspecies)       LC           2 km  \n4    black-throated finch (white-rumped subspecies)       EN           2 km  \n..                                              ...      ...            ...  \n955                                       lime fern       UK           2 km  \n956                                             NaN       NT           2 km  \n957                                             NaN       VU           2 km  \n958                                             NaN       CR           2 km  \n959                                             NaN       EW           2 km  \n\n[960 rows x 4 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>category</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Rhinolophus robertsi</td>\n      <td>greater large-eared horseshoe bat</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Chloebia gouldiae</td>\n      <td>Gouldian finch</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Erythrura trichroa</td>\n      <td>blue-faced parrot-finch</td>\n      <td>NT</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Neochmia phaeton evangelinae</td>\n      <td>crimson finch (white-bellied subspecies)</td>\n      <td>LC</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Poephila cincta cincta</td>\n      <td>black-throated finch (white-rumped subspecies)</td>\n      <td>EN</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>955</th>\n      <td>Pneumatopteris pennigera</td>\n      <td>lime fern</td>\n      <td>UK</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>956</th>\n      <td>Reholttumia costata</td>\n      <td>NaN</td>\n      <td>NT</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>957</th>\n      <td>Thelypteris confluens</td>\n      <td>NaN</td>\n      <td>VU</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>958</th>\n      <td>Macadamia jansenii</td>\n      <td>NaN</td>\n      <td>CR</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>959</th>\n      <td>Tmesipteris lanceolata</td>\n      <td>NaN</td>\n      <td>EW</td>\n      <td>2 km</td>\n    </tr>\n  </tbody>\n</table>\n<p>960 rows × 4 columns</p>\n</div>"
+      "text/plain": "                   scientificName  \\\n0            Rhinolophus robertsi   \n1               Chloebia gouldiae   \n2              Erythrura trichroa   \n3    Neochmia phaeton evangelinae   \n4          Poephila cincta cincta   \n..                            ...   \n955      Pneumatopteris pennigera   \n956           Reholttumia costata   \n957         Thelypteris confluens   \n958            Macadamia jansenii   \n959        Tmesipteris lanceolata   \n\n                                     vernacularName category  WildNetTaxonID  \\\n0                 greater large-eared horseshoe bat       EN             969   \n1                                    Gouldian finch       EN            1376   \n2                           blue-faced parrot-finch       NT            1378   \n3          crimson finch (white-bellied subspecies)       LC            1370   \n4    black-throated finch (white-rumped subspecies)       EN            1365   \n..                                              ...      ...             ...   \n955                                       lime fern       UK           11700   \n956                                             NaN       NT           42079   \n957                                             NaN       VU           16042   \n958                                             NaN       CR            8185   \n959                                             NaN       EW            8486   \n\n    generalisation  \n0             2 km  \n1             2 km  \n2             2 km  \n3             2 km  \n4             2 km  \n..             ...  \n955           2 km  \n956           2 km  \n957           2 km  \n958           2 km  \n959           2 km  \n\n[960 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>category</th>\n      <th>WildNetTaxonID</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Rhinolophus robertsi</td>\n      <td>greater large-eared horseshoe bat</td>\n      <td>EN</td>\n      <td>969</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Chloebia gouldiae</td>\n      <td>Gouldian finch</td>\n      <td>EN</td>\n      <td>1376</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Erythrura trichroa</td>\n      <td>blue-faced parrot-finch</td>\n      <td>NT</td>\n      <td>1378</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Neochmia phaeton evangelinae</td>\n      <td>crimson finch (white-bellied subspecies)</td>\n      <td>LC</td>\n      <td>1370</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Poephila cincta cincta</td>\n      <td>black-throated finch (white-rumped subspecies)</td>\n      <td>EN</td>\n      <td>1365</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>955</th>\n      <td>Pneumatopteris pennigera</td>\n      <td>lime fern</td>\n      <td>UK</td>\n      <td>11700</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>956</th>\n      <td>Reholttumia costata</td>\n      <td>NaN</td>\n      <td>NT</td>\n      <td>42079</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>957</th>\n      <td>Thelypteris confluens</td>\n      <td>NaN</td>\n      <td>VU</td>\n      <td>16042</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>958</th>\n      <td>Macadamia jansenii</td>\n      <td>NaN</td>\n      <td>CR</td>\n      <td>8185</td>\n      <td>2 km</td>\n    </tr>\n    <tr>\n      <th>959</th>\n      <td>Tmesipteris lanceolata</td>\n      <td>NaN</td>\n      <td>EW</td>\n      <td>8486</td>\n      <td>2 km</td>\n    </tr>\n  </tbody>\n</table>\n<p>960 rows × 5 columns</p>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,11 +195,12 @@
    "source": [
     "# nca status\n",
     "sensitivelist = pd.merge(sensitivelist,ncastatuscodes,left_on=['NCA status'],right_on=['Code'],how=\"left\")\n",
-    "sensitivelist = sensitivelist.rename(columns={'NCA status':'sourceStatus'})\n",
-    "sensitivelist = sensitivelist[['Scientific name', 'Common name', 'sourceStatus']]\n",
+    "#sensitivelist = sensitivelist.rename(columns={'NCA status':'sourceStatus'})\n",
+    "sensitivelist = sensitivelist[['Scientific name', 'Common name', 'NCA status','Taxon Id']]\n",
     "sensitivelist = sensitivelist.rename(columns= {'Scientific name':'scientificName',\n",
     "                                               'Common name': 'vernacularName',\n",
-    "                                                'sourceStatus': 'category' })\n",
+    "                                                'NCA status': 'category', \n",
+    "                                                'Taxon Id':'WildNetTaxonID'})\n",
     "sensitivelist['generalisation'] = \"2 km\"\n",
     "# map sourceStatus to category\n",
     "codeMap = {'C': 'LC', 'CR': 'CR', 'E': 'EN',\n",
@@ -216,8 +217,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2024-01-12T04:39:08.857908Z",
-     "start_time": "2024-01-12T04:39:08.844230Z"
+     "end_time": "2024-01-12T07:14:55.574105Z",
+     "start_time": "2024-01-12T07:14:55.562948Z"
     }
    }
   },
@@ -245,14 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "                           name              scientificName  \\\n105        Relicina rahengensis        Relicina rahengensis   \n0    Rhinolophus philippinensis  Rhinolophus philippinensis   \n0          Rhinolophus robertsi        Rhinolophus robertsi   \n\n                            commonName listUpdate  \n105                               None      added  \n0    Greater Large-eared Horseshoe Bat    removed  \n0            Large-eared Horseshoe Bat      added  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>scientificName</th>\n      <th>commonName</th>\n      <th>listUpdate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>105</th>\n      <td>Relicina rahengensis</td>\n      <td>Relicina rahengensis</td>\n      <td>None</td>\n      <td>added</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Rhinolophus philippinensis</td>\n      <td>Rhinolophus philippinensis</td>\n      <td>Greater Large-eared Horseshoe Bat</td>\n      <td>removed</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Rhinolophus robertsi</td>\n      <td>Rhinolophus robertsi</td>\n      <td>Large-eared Horseshoe Bat</td>\n      <td>added</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,8 +272,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2024-01-12T05:59:52.101232Z",
-     "start_time": "2024-01-12T05:59:47.249306Z"
+     "end_time": "2024-01-12T07:18:51.463565Z",
+     "start_time": "2024-01-12T07:18:46.488380Z"
     }
    }
   },
